--- a/test/eager.html
+++ b/test/eager.html
@@ -1,19 +1,12 @@
 <!doctype html>
 
-<script type="importmap">
-  {
-    "imports": {
-      "zora": "https://cdn.jsdelivr.net/npm/zora/dist/index.js"
-    }
-  }
-</script>
-
 <script>
   ZORA_TIMEOUT = 10000;
 </script>
 
-<script src="../dist/super-media-element.js"></script>
-<script type="module" src="./test.js"></script>
+<body>
+
+<script src="../dist/test.js"></script>
 
 <super-video
   id="superVideo"
