feat: add webkit events, custom-media-el bug fixes

--- a/test/eager.html
+++ b/test/eager.html
@@ -12,4 +12,5 @@
   id="superVideo"
   muted
   src="http://stream.mux.com/DS00Spx1CV902MCtPj5WknGlR102V5HFkDe/low.mp4"
+  crossorigin
 ></super-media>
